# DareData-Assignments

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
life_expectancy/: cleaning.py  notebook.ipynb
life_expectancy/tests/: test_cleaning.py
